[package]
name = "binary_ok"
version = "0.2.1"
authors = ["Kenedy-Henrique <kenedyhenrique.buenosilva@gmail.com>"]
edition = "2018"
repository = "https://github.com/Kenedy-Henrique/binary_ok"
license = "MIT OR Apache-2.0"
description = "A crate to help you convert from binary to decimal and from decimal to binary, you can pass as reference &f64 and &u128 numbers."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
